Create a query processor settings dialog.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -125,6 +125,8 @@ xquery.settings.colors.xml.escaped.character=Direct XML Construction//Escaped Ch
 xquery.settings.colors.xqdoc.markup=xqDoc//Markup
 xquery.settings.colors.xqdoc.tag=xqDoc//Tag
 xquery.settings.colors.xqdoc.tag-value=xqDoc//Tag Value
+xquery.settings.dialog.query-processor.create=New Query Processor Instance
+xquery.settings.dialog.query-processor.edit=Edit Query Processor Instance
 xquery.settings.project.implementation.label=Implementation:
 xquery.settings.project.implementation.version.label=Implementation version:
 xquery.settings.project.default.version.label=Default XQuery version:
