Support editing the query processor api.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -129,6 +129,7 @@ xquery.settings.colors.xqdoc.tag=xqDoc//Tag
 xquery.settings.colors.xqdoc.tag-value=xqDoc//Tag Value
 xquery.settings.dialog.query-processor.create=New Query Processor Instance
 xquery.settings.dialog.query-processor.edit=Edit Query Processor Instance
+xquery.settings.dialog.query-processor.implementation.label=Implementation:
 xquery.settings.dialog.query-processor.name.label=Name:
 xquery.settings.project.implementation.label=Implementation:
 xquery.settings.project.implementation.version.label=Implementation version:
