Support editing the query processor jar api/implementation file.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,6 +1,7 @@
 annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
+browser.choose.implementation-api-jar=Implementation/API JAR File
 find-usages.identifier=Identifier
 fnerror.FORG0001.lexical-representation=The value does not match the lexical representation for ''{0}''.
 fnerror.XPTY0004.incompatible-types=Incompatible types when casting ''{0}'' to ''{1}''.
@@ -127,6 +128,7 @@ xquery.settings.colors.xml.escaped.character=Direct XML Construction//Escaped Ch
 xquery.settings.colors.xqdoc.markup=xqDoc//Markup
 xquery.settings.colors.xqdoc.tag=xqDoc//Tag
 xquery.settings.colors.xqdoc.tag-value=xqDoc//Tag Value
+xquery.settings.dialog.query-processor.api-jar.label=JAR File:
 xquery.settings.dialog.query-processor.create=New Query Processor Instance
 xquery.settings.dialog.query-processor.edit=Edit Query Processor Instance
 xquery.settings.dialog.query-processor.implementation.label=Implementation:
