Support editing the query processor credentials.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -131,8 +131,13 @@ xquery.settings.colors.xqdoc.tag-value=xqDoc//Tag Value
 xquery.settings.dialog.query-processor.api-jar.label=JAR File:
 xquery.settings.dialog.query-processor.create=New Query Processor Instance
 xquery.settings.dialog.query-processor.edit=Edit Query Processor Instance
+xquery.settings.dialog.query-processor.hostname.label=Hostname:
 xquery.settings.dialog.query-processor.implementation.label=Implementation:
 xquery.settings.dialog.query-processor.name.label=Name:
+xquery.settings.dialog.query-processor.password.label=Password:
+xquery.settings.dialog.query-processor.server-port.label=Server port:
+xquery.settings.dialog.query-processor.standalone.label=Create a standalone instance
+xquery.settings.dialog.query-processor.username.label=Username:
 xquery.settings.project.implementation.label=Implementation:
 xquery.settings.project.implementation.version.label=Implementation version:
 xquery.settings.project.default.version.label=Default XQuery version:
