Rename ConnectionSettings.{port => databasePort}.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -135,7 +135,7 @@ xquery.settings.dialog.query-processor.hostname.label=Hostname:
 xquery.settings.dialog.query-processor.implementation.label=Implementation:
 xquery.settings.dialog.query-processor.name.label=Name:
 xquery.settings.dialog.query-processor.password.label=Password:
-xquery.settings.dialog.query-processor.server-port.label=Server port:
+xquery.settings.dialog.query-processor.database-port.label=Database port:
 xquery.settings.dialog.query-processor.standalone.label=Create a standalone instance
 xquery.settings.dialog.query-processor.username.label=Username:
 xquery.settings.project.implementation.label=Implementation:
