Add an admin port to the connection settings for MarkLogic.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -128,14 +128,15 @@ xquery.settings.colors.xml.escaped.character=Direct XML Construction//Escaped Ch
 xquery.settings.colors.xqdoc.markup=xqDoc//Markup
 xquery.settings.colors.xqdoc.tag=xqDoc//Tag
 xquery.settings.colors.xqdoc.tag-value=xqDoc//Tag Value
+xquery.settings.dialog.query-processor.admin-port.label=Admin port:
 xquery.settings.dialog.query-processor.api-jar.label=JAR File:
 xquery.settings.dialog.query-processor.create=New Query Processor Instance
+xquery.settings.dialog.query-processor.database-port.label=Database port:
 xquery.settings.dialog.query-processor.edit=Edit Query Processor Instance
 xquery.settings.dialog.query-processor.hostname.label=Hostname:
 xquery.settings.dialog.query-processor.implementation.label=Implementation:
 xquery.settings.dialog.query-processor.name.label=Name:
 xquery.settings.dialog.query-processor.password.label=Password:
-xquery.settings.dialog.query-processor.database-port.label=Database port:
 xquery.settings.dialog.query-processor.standalone.label=Create a standalone instance
 xquery.settings.dialog.query-processor.username.label=Username:
 xquery.settings.project.implementation.label=Implementation:
