Support editing the query processor configuration file.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,6 +1,7 @@
 annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
+browser.choose.configuration=Configuration File
 browser.choose.implementation-api-jar=Implementation/API JAR File
 find-usages.identifier=Identifier
 fnerror.FORG0001.lexical-representation=The value does not match the lexical representation for ''{0}''.
@@ -130,6 +131,7 @@ xquery.settings.colors.xqdoc.tag=xqDoc//Tag
 xquery.settings.colors.xqdoc.tag-value=xqDoc//Tag Value
 xquery.settings.dialog.query-processor.admin-port.label=Admin port:
 xquery.settings.dialog.query-processor.api-jar.label=JAR File:
+xquery.settings.dialog.query-processor.config-path.label=Configuration File:
 xquery.settings.dialog.query-processor.create=New Query Processor Instance
 xquery.settings.dialog.query-processor.database-port.label=Database port:
 xquery.settings.dialog.query-processor.edit=Edit Query Processor Instance
