--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -109,6 +109,7 @@ parser.error.wildcard.whitespace-after-local-part=XPST0003: Whitespace is not al
 parser.error.wildcard.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a wildcard.
 parser.error.wildcard.both-prefix-and-local-wildcard=XPST0003: Wildcard prefix and local parts are not allowed.
 processor.exception.missing-jar=Missing JAR file
+processor.exception.unsupported-jar=Unsupported JAR file
 xquery.configurations.processor.query-processor.label=Query Processor:
 xquery.configurations.processor.create.label=Create
 xquery.files.filetype.description=XML Query Language
