Verify the query processor by checking the version of the processor.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -145,6 +145,7 @@ xquery.settings.dialog.query-processor.name.label=Name:
 xquery.settings.dialog.query-processor.password.label=Password:
 xquery.settings.dialog.query-processor.standalone.label=Create a standalone instance
 xquery.settings.dialog.query-processor.username.label=Username:
+xquery.settings.dialog.query-processor.validating-processor=Validating the query processor instance...
 xquery.settings.project.implementation.label=Implementation:
 xquery.settings.project.implementation.version.label=Implementation version:
 xquery.settings.project.default.version.label=Default XQuery version:
