Support editing and removing query processors from the query processor list.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -113,7 +113,9 @@ processor.exception.missing-hostname=Missing hostname
 processor.exception.missing-jar=Missing JAR file
 processor.exception.unsupported-jar=Unsupported JAR file
 xquery.configurations.processor.query-processor.label=Query Processor:
-xquery.configurations.processor.create.label=Create
+xquery.configurations.processor.manage.label=Manage
+xquery.configurations.processor.manage-processors=Manage Query Processors
+xquery.configurations.processor.manage-processors-empty=No processors
 xquery.files.filetype.description=XML Query Language
 xquery.settings.colors.annotation=Annotation
 xquery.settings.colors.bad.character=Invalid Character
