Support specifying a script file for the run configuration.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -3,6 +3,7 @@ annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' 
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
 browser.choose.configuration=Configuration File
 browser.choose.implementation-api-jar=Implementation/API JAR File
+browser.choose.script-file=Script File
 find-usages.identifier=Identifier
 fnerror.FORG0001.lexical-representation=The value does not match the lexical representation for ''{0}''.
 fnerror.XPTY0004.incompatible-types=Incompatible types when casting ''{0}'' to ''{1}''.
@@ -112,10 +113,11 @@ processor.exception.host-connection-error=Cannot connect to ''{0}''
 processor.exception.missing-hostname=Missing hostname
 processor.exception.missing-jar=Missing JAR file
 processor.exception.unsupported-jar=Unsupported JAR file
-xquery.configurations.processor.query-processor.label=Query Processor:
 xquery.configurations.processor.manage.label=Manage
 xquery.configurations.processor.manage-processors=Manage Query Processors
 xquery.configurations.processor.manage-processors-empty=No processors
+xquery.configurations.processor.query-processor.label=Query Processor:
+xquery.configurations.processor.script-file.label=Script File:
 xquery.files.filetype.description=XML Query Language
 xquery.settings.colors.annotation=Annotation
 xquery.settings.colors.bad.character=Invalid Character
