Parser: Support the TernaryIfExpr from xpath-ng proposal 2, supported by BaseX 9.1.

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,8 @@ src/test/resources/tests/parser/basex-8.4/*.txt text eol=lf
 src/test/resources/tests/parser/basex-8.4/*.xq text eol=lf
 src/test/resources/tests/parser/basex-8.5/*.txt text eol=lf
 src/test/resources/tests/parser/basex-8.5/*.xq text eol=lf
+src/test/resources/tests/parser/xpath-ng/proposal-*/*.txt text eol=lf
+src/test/resources/tests/parser/xpath-ng/proposal-*/*.xq text eol=lf
 src/test/resources/tests/parser/full-text-1.0/*.txt text eol=lf
 src/test/resources/tests/parser/full-text-1.0/*.xq text eol=lf
 src/test/resources/tests/parser/intellij-plugin/*.txt text eol=lf
