--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -26,6 +26,7 @@
     <p>BaseX Vendor Extensions:</p>
     <ol>
       <li>Support the BaseX 9.1 <code>TernaryIfExpr</code> conditional expressions.</li>
+      <li>Support the BaseX 9.1 <code>ElvisExpr</code> conditional expressions.</li>
     </ol>
     <p>XQuery Working Draft 02 May 2003 and MarkLogic 0.9-ml Support:</p>
     <ol>
