Improve the conformance inspection message for if without else expressions.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,8 +1,8 @@
 annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
+construct.if-without-else='if' without 'else'
 find-usages.identifier=Identifier
-fnerror.FORG0001.lexical-representation=The value does not match the lexical representation for ''{0}''.
 fnerror.XPTY0004.incompatible-types=Incompatible types when casting ''{0}'' to ''{1}''.
 inspection.ijvs.group-name=IJVS: Vendor-specific behaviour
 inspection.ijvs.IJVS0001=IJVS0001: Unsupported XQuery construct
@@ -23,6 +23,7 @@ inspection.XPST0003.map-constructor-entry.message=XPST0003: Expected ':' (XQuery
 inspection.XPST0003.reserved-function-name.message=XPST0003: Reserved {0} keyword used as a function name.
 inspection.XPST0003.unsupported-construct.message=XPST0003: {0} does not support {1} constructs.
 inspection.XPST0003.unsupported-construct-version.message=XPST0003: XQuery version string ''{0}'' does not support {1} constructs.
+inspection.XPST0003.unsupported-construct-with-name.message=XPST0003: {0} does not support {1} {2} constructs.
 inspection.XPST0017.undefined-function.unresolved-qname=XPST0017: Cannot locate the function name.
 inspection.XPST0017.undefined-function.unresolved-arity=XPST0017: The number of arguments do not match a function.
 inspection.XPST0081.unbound-qname-prefix.message=XPST0081: Cannot resolve namespace prefix.
