Make the first item in a ParenthesizedSequenceType accept any SequenceType construct.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -2,6 +2,7 @@ annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' 
 annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
 construct.if-without-else='if' without 'else'
+construct.parenthesized-sequence-type=parenthesized 'SequenceType'
 find-usages.identifier=Identifier
 fnerror.XPTY0004.incompatible-types=Incompatible types when casting ''{0}'' to ''{1}''.
 inspection.ijvs.group-name=IJVS: Vendor-specific behaviour
