--- a/.gitattributes
+++ b/.gitattributes
@@ -33,6 +33,8 @@ src/test/resources/tests/parser/xquery-3.0/*.txt text eol=lf
 src/test/resources/tests/parser/xquery-3.0/*.xq text eol=lf
 src/test/resources/tests/parser/xquery-3.1/*.txt text eol=lf
 src/test/resources/tests/parser/xquery-3.1/*.xq text eol=lf
+src/test/resources/tests/parser/xquery-semantics-1.0/*.txt text eol=lf
+src/test/resources/tests/parser/xquery-semantics-1.0/*.xq text eol=lf
 src/test/resources/tests/parser/xquery-sx-1.0/*.txt text eol=lf
 src/test/resources/tests/parser/xquery-sx-1.0/*.xq text eol=lf
 src/test/resources/tests/parser/xquery-update-1.0/*.txt text eol=lf
