BaseX: Check for the 'Not Implemented.' runtime exception thrown by BaseX 6.5.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -115,6 +115,7 @@ processor.exception.host-connection-error=Cannot connect to ''{0}''
 processor.exception.missing-hostname=Missing hostname
 processor.exception.missing-jar=Missing JAR file
 processor.exception.unsupported-jar=Unsupported JAR file
+processor.exception.unsupported-operation=Configuration not supported by the processor
 xquery.configurations.processor.manage-processors=Manage Query Processors
 xquery.configurations.processor.manage-processors-empty=No processors
 xquery.configurations.processor.query-processor.label=Query Processor:
