--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,7 @@ allprojects {
     apply plugin: 'jacoco'
 
     group 'uk.co.reecedunn.intellij.plugin.xquery'
-    version '1.3-dev'
+    version '1.3'
 
     repositories {
         mavenCentral()
