--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,7 +13,7 @@
   ]]></description>
 
   <change-notes><![CDATA[
-    <h3>Release 1.3-dev:</h3>
+    <h3>Release 1.3:</h3>
     <ol>
       <li>Added support for the eXist-db XQuery database.</li>
       <li>Initial support for running queries on the BaseX, eXist-db, MarkLogic and Saxon XQuery processors.</li>
