--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,71 +13,7 @@
   ]]></description>
 
   <change-notes><![CDATA[
-    <h3>Release 1.3:</h3>
-    <ol>
-      <li>Added support for the eXist-db XQuery database.</li>
-      <li>Initial support for running queries on the BaseX, eXist-db, MarkLogic and Saxon XQuery processors.</li>
-      <li>Support for Saxon 9.9 and BaseX 9.1 syntax extensions (see below).</li>
-      <li>Support for the BaseX and Saxon built-in functions. Thanks to Bridger Dyson-Smith for adding these.</li>
-      <li>Improved resolving imported modules, names, and functions (see below).</li>
-    </ol>
-    <p>Saxon Vendor Extensions:</p>
-    <ol>
-      <li>Recognise Saxon <code>UnionType</code> constructs in <code>TypedMapTest</code> sequence types.</li>
-      <li>Support <code>TupleType</code> constructs with names only, not associated sequence types.</li>
-      <li>Support Saxon 9.8 simple inline function expressions.</li>
-      <li>Support Saxon 9.9 <code>orElse</code> and <code>andAlso</code> logical expressions.</li>
-      <li>Support Saxon 9.9 optional field names for tuples, and extensible tuples.</li>
-      <li>Support <code>NCName</code> and <code>URIQualifiedName</code> types in the <code>union()</code> syntax.</li>
-    </ol>
-    <p>BaseX Vendor Extensions:</p>
-    <ol>
-      <li>Support the BaseX 9.1 <code>TernaryIfExpr</code> conditional expressions.</li>
-      <li>Support the BaseX 9.1 <code>ElvisExpr</code> conditional expressions.</li>
-      <li>Support the BaseX 9.1 if expressions without else branches.</li>
-    </ol>
-    <p>XQuery Working Draft 02 May 2003 and MarkLogic 0.9-ml Support:</p>
-    <ol>
-      <li>Support <code>empty()</code> syntax for <code>empty-sequence()</code>.</li>
-    </ol>
-    <p>Invalid Syntax Recovery:</p>
-    <ol>
-      <li>Recover parsing when the <code>CompElemConstructor</code>, <code>CompAttrConstructor</code>, <code>CompPIConstructor</code>, or <code>CompNamespaceConstructor</code> tag name is a <code>StringLiteral</code>.</li>
-      <li>Recover parsing when a <code>SequenceType</code> is used in a <code>ParenthesizedItemType</code>.</li>
-    </ol>
-    <p>Static Context:</p>
-    <ol>
-      <li>Add the <code>sql</code> namespace to the MarkLogic static context, added in MarkLogic 7.0.</li>
-      <li>Add support for the BaseX built-in functions and static context. Thanks to Bridger Dyson-Smith for providing the built-in function definitions.</li>
-      <li>Add support for the Saxon built-in functions and static context. Thanks to Bridger Dyson-Smith for providing the built-in function definitions.</li>
-      <li>Add support for EXPath and EXQuery module functions used by BaseX and Saxon as built-in functions and importable modules.</li>
-    </ol>
-    <p>Module Import Resolution:</p>
-    <ol>
-      <li>Use project source roots to resolve module import URIs.</li>
-      <li>Locate built-in definitions from <code>http://</code>-based <code>URILiteral</code> nodes.</li>
-      <li>Resolve all location URIs in a <code>ModuleImport</code>, not just the first valid location.</li>
-      <li>Resolve <code>ModuleImport</code> declarations that don't specify <code>at</code> paths.</li>
-    </ol>
-    <p>EQName Resolution:</p>
-    <ol>
-      <li>
-        Expand <code>NCName</code>-based <code>EQName</code> nodes, using the default element or function
-        namespaces where appropriate.
-      </li>
-      <li>Resolve EQNames bound to <code>NamespaceDecl</code> declarations.</li>
-      <li>Resolve EQNames bound to <code>DefaultNamespaceDecl</code> declarations.</li>
-      <li>Resolve EQNames bound to <code>DirAttributeList</code> attributes.</li>
-    </ol>
-    <p>Function Resolution:</p>
-    <ol>
-      <li>Matching statically-known functions against expanded QNames.</li>
-      <li>Search the <code>MainModule</code>/<code>LibraryModule</code> prolog for function declarations.</li>
-    </ol>
-    <p>Inspections:</p>
-    <ol>
-      <li>IJVS0001: Report warnings for constructs that require a different XQuery version.</li>
-    </ol>
+    <h3>Release 1.4-dev:</h3>
   ]]></change-notes>
 
   <idea-version since-build="161"/>
