[xpath parser] Parse invalid and unrecognised tokens.

--- a/src/lang-xpath/main/resources/messages/XPathBundle.properties
+++ b/src/lang-xpath/main/resources/messages/XPathBundle.properties
@@ -1,3 +1,5 @@
 construct.if-without-else='if' without 'else'
 construct.parenthesized-sequence-type=parenthesized 'SequenceType'
+parser.error.expected-eof=XPST0003: Expected end of file.
+parser.error.unexpected-token=XPST0003: Unexpected token.
 xpath.files.filetype.description=XML Path Language
