Use core.tests.assertion in the integration tests.

--- a/build.gradle
+++ b/build.gradle
@@ -136,6 +136,7 @@ dependencies {
 
     integrationTestCompile configurations.testCompile
     integrationTestCompile sourceSets.main.output
+    integrationTestCompile project(':src:kotlin-hamcrest')
 
     integrationTestRuntime configurations.testRuntime
 }
